初回コミット

--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,8 @@
         <div class="control_button">
             <button type="submit">登録する</button>
         </div>
-
+        <p>sample</p>
+        <p>mk branchA</p>
     </div>
 
 </body>
