--- a/PortFolioPage/html/index.html
+++ b/PortFolioPage/html/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>山田にゃん太のポートフォリオサイト</title>
+    <meta name="description" content="山田にゃん太のポートフォリオサイト">
     <link rel="stylesheet" href="../PortFolioPage/css/style.css">
 </head>
 <body>
