--- a/PortFolioPage/html/index.html
+++ b/PortFolioPage/html/index.html
@@ -6,9 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>山田にゃん太のポートフォリオサイト</title>
     <meta name="description" content="山田にゃん太のポートフォリオサイト">
-    <link rel="stylesheet" href="../PortFolioPage/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <header>
+        <img src="../images/photo.png" alt="プロフィール写真" >
+        <h1>山田にゃん太</h1>
+        <p>ウェブデザイナー見習い</p>
+    </header>
+    <div class=" title skils">
+        <h2>MY SKILLS</h2>
+        <div class="container">
+            <div class="item s_html">HTML5</div>
+            <div class="item s_css">CSS3</div>
+            <div class="item s_js">JavaScript</div>
+        </div>
+    </div>
+    <div class="title works">
+        <h2>Works</h2>
+        <div class="left">
+            <img src="../images/cat.png" alt="猫の写真" width="500px">
+            <h3>猫のサイト</h3>
+        </div>
+    </div>
+    <footer><small>&copy; 2022 tt</small></footer>
 </body>
 </html>
