--- a/PortFolioPage/html/index.html
+++ b/PortFolioPage/html/index.html
@@ -3,12 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>山田にゃん太のポートフォリオサイト</title>
-    <meta name="description" content="山田にゃん太のポートフォリオサイト">
-    <link rel="stylesheet" href="../PortFolioPage/css/style.css">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css"> 
 </head>
-<body>
+<body id="home">
+    <!-- header -->
+    <header id="top">
+        <div class="header_content wrapper">
+            <h1><img class="header_logo" src="https://via.placeholder.com/100x90" alt="CSS Cafe"></h1>
+            <nav>
+                <ul>
+                    <li class="current"><a href="index.html">home</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Access</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="main_image"></div>
+    </header> 
+    <!-- header_end -->
+
+    <!-- contents -->
     
+    <div class="contents wrapper">
+
+        <!-- main -->
+        <main id="main_content">
+
+            <section id="info">
+                <h2>お知らせ</h2>
+                <dl>
+                    <dt>2020/3/10</dt>
+                    <dd>リニューアルオープンしました。</dd>
+                    <dt>2020/4/15</dt>
+                    <dd>4/27（金）は設備メンテナンスのため休業いたします。</dd>
+                    <dt>2018/4/20</dt>
+                    <dd>ゴールデンウィークは休まず営業いたします</dd>
+                    <dt>2020/6/20</dt>
+                    <dd>こだわりのパンに合わせたスペシャルデザートが登場</dd>
+                    <dt>2020/7/10</dt>
+                    <dd>営業時間の一部変更について</dd>
+                </dl>
+            </section>
+            <section id="campaign">
+                <h2>キャンペーン情報</h2>
+                <ul>
+                    <li>日頃の感謝を込めて、パスタ全品がいつもよりお得に！</li>
+                    <li>平日11時から14時までお得なランチタイムを実施中。</li>
+                    <li>バイオリン演奏付きのスペシャルディナーイベントの早期予約受付中。</li>
+                    <li>夏限定のスペシャルフルーツサンドを楽しもう！</li>
+                </ul>
+            </section>
+        </main>
+        <!-- main_end -->
+        <!-- sidebar -->
+
+        <aside id="sidebar">
+            <ul>
+                <li><a href="#"><img src="https://via.placeholder.com/250x150.png" alt="季節のおすすめ商品はこちら"></a></li>
+                <li><a href="#"><img src="https://via.placeholder.com/250x150.png" alt="コーヒーの豆知識はこちら"></a></li>
+            </ul>
+        </aside>
+        <!-- sidebar_end -->
+    </div>
+    <!-- contents_end -->
+    <!-- footer -->
+    <footer>
+        <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="#">商品情報</a></li>
+             <li><a href="#">店舗紹介</a></li>
+            <li><a href="#">アクセス</a></li>
+            <li><a href="#">会社情報</a></li>
+            <li><a href="#">お問い合わせ</a></li>
+        </ul>
+        <small>&copy;2020 CSS Cafe</small>
+    </footer>
+    <!-- footer_end -->
+    
+
+
 </body>
 </html>
