--- a/PortFolioPage/html/index.html
+++ b/PortFolioPage/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css"> 
 </head>
@@ -11,7 +11,7 @@
     <!-- header -->
     <header id="top">
         <div class="header_content wrapper">
-            <h1><img class="header_logo" src="https://via.placeholder.com/100x90" alt="CSS Cafe"></h1>
+            <h1><img class="header_logo" src="../images/logo.png" alt="CSS Cafe"></h1>
             <nav>
                 <ul>
                     <li class="current"><a href="index.html">home</a></li>
@@ -24,13 +24,11 @@
     </header> 
     <!-- header_end -->
 
-    <!-- contents -->
-    
+    <!-- contents -->    
     <div class="contents wrapper">
 
         <!-- main -->
         <main id="main_content">
-
             <section id="info">
                 <h2>お知らせ</h2>
                 <dl>
@@ -61,8 +59,8 @@
 
         <aside id="sidebar">
             <ul>
-                <li><a href="#"><img src="https://via.placeholder.com/250x150.png" alt="季節のおすすめ商品はこちら"></a></li>
-                <li><a href="#"><img src="https://via.placeholder.com/250x150.png" alt="コーヒーの豆知識はこちら"></a></li>
+                <li><a href="#"><img src="../images/banner01.png" alt="季節のおすすめ商品はこちら"></a></li>
+                <li><a href="#"><img src="../images/banner02.png" alt="コーヒーの豆知識はこちら"></a></li>
             </ul>
         </aside>
         <!-- sidebar_end -->
