colで指定すると自動で幅を調節してくれる。 12を超える部分は下へ自動で配置される

--- a/bootstrap/html/index.html
+++ b/bootstrap/html/index.html
@@ -37,6 +37,39 @@
             <div class="col-2 orange">2</div>
             <div class="col-2 orange">2</div>
         </div>
+
+        <div class="row">
+            <div class="col-3 orange">3</div>
+            <div class="col-3 orange">3</div>
+            <div class="col-3 orange">3</div>
+            <div class="col-3 orange">3</div>
+        </div>
+
+        <div class="row">
+            <div class="col-4 orange">4</div>
+            <div class="col-4 orange">4</div>
+            <div class="col-4 orange">4</div>
+        </div>
+
+        <div class="row">
+            <div class="col-6 orange">4</div>
+            <div class="col-6 orange">4</div>
+        </div>
+        <div class="row">
+            <div class="col-12 orange">12</div>
+        </div>
+
+        <div class="row">
+            <div class="col-9 orange">9</div>
+            <div class="col-3 orange">3</div>
+        </div>
+
+        <div class="row">
+            <div class="col orange">auto</div>
+            <div class="col-2 orange">2</div>
+            <div class="col-6 orange">6</div>
+
+        </div>
     </div>
     
     
